--- a/static/css/public.css
+++ b/static/css/public.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&family=Noto+Sans+KR:wght@300&display=swap');
 body,html {
     margin: 0;
     height: 100%;
+    font-family: 'Montserrat', sans-serif;
 }
 #header {
     background-color: white;
