--- a/templates/index.html
+++ b/templates/index.html
@@ -5,54 +5,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" 
+	      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/public.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index_style.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='js/index_js.js') }}">
+    <script type="text/javascript" src="{{ url_for('static', filename='js/index_js.js') }}"></script>
     <title>Min`s Portfolio</title>
 </head>
 <body>
-
+    
     {% include 'header.html' %}
 
     <div id="pagescroll">
 
         <div class="section main">
-            <div class="one">
-                <img src="{{ url_for('static', filename='design/mins.png') }}"/>
-            </div> 
-            <div class="two">
-                <img src="{{ url_for('static', filename='design/portfolio.png') }}"/>
+            <div><h1>MIN<p>`s</p></h1></div> 
+            <div><h1 align="right">PORTFOLIO</h1></div>
+        </div>
+
+        <div class="section portfolio">
+            <div class="pf mintube">
+                <div class="img">
+                    <p>준비중입니다</p>
+                </div>
+                <div class="dsc">
+                    <h1>MINTUBE</h1>
+                    <p>- Youtube Clone</p>
+                    <div class="button">
+                        <button onclick="location.href='/present/mintube'">사이트 소개</button>
+                        <button>사이트 바로가기</button>
+                    </div>
+                </div>
+            </div>
+            <div class="pf dms">
+                <div class="dsc">
+                    <h1>DMS</h1>
+                    <p>- Front-End practice</p>
+                    <div class="button">
+                        <button onclick="location.href='/present/dms'">사이트 소개</button>
+                        <button>사이트 바로가기</button>
+                    </div>
+                </div>
+                <div class="img">
+                    <p>준비중입니다</p>
+                </div>
             </div>
         </div>
 
         <div class="section portfolio">
-            <div class="pf1">
-                <div class="mintube">
-                    <button>mintube</button>
+            <div class="pf bcrm">
+                <div class="img">
+                    <p>준비중입니다</p>
                 </div>
-                <div class="dms">
-                    <button>dms</button>
+                <div class="dsc">
+                    <h1>CRM</h1>
+                    <p>- for HairSalon</p>
+                    <div class="button">
+                        <button onclick="location.href='/present/bcrm'">사이트 소개</button>
+                        <button>사이트 바로가기</button>
+                    </div>
                 </div>
             </div>
-        </div>
-
-        <div class="section portfolio">
-            <div class="pf2">
-                <div class="bcrm">
-                    <button>bcrm</button>
+            <div class="pf community">
+                <div class="dsc">
+                    <h1>COMMUNITY</h1>
+                    <p>- post & comment</p>
+                    <div class="button">
+                        <button onclick="location.href='/present/community'">사이트 소개</button>
+                        <button>사이트 바로가기</button>
+                    </div>
                 </div>
-                <div class="community">
-                    <button>community</button>
+                <div class="img">
+                    <p>준비중입니다</p>
                 </div>
             </div>
         </div>
 
         <div class="section">
-            <div class="about"></div>
+            <div class="about">
+                <div class="profile">
+                    <img src="{{ url_for('static', filename='logo/dobermin.png') }}">
+                    <p>MIN</p>
+                </div>
+                <div class="passion">
+                    <div class="me">
+                        <h1>about me</h1>
+                        <h3>- 화려해질 예정</h3>
+                    </div>
+                </div>
+            </div>
             {% include 'footer.html' %}
         </div>
 
