--- a/templates/sample/sample.html
+++ b/templates/sample/sample.html
@@ -3,12 +3,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-		  crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" 
+	      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <title>sample</title>
+    <style>
+      body { margin: 10px; height: 2000px; font-family: 'Montserrat', sans-serif; }
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&family=Noto+Sans+KR:wght@300&display=swap');
+      .pf {
+        margin-top: 1000px;
+        height: 50vh;
+    display: flex;
+    padding: 20px 100px;
+}
+.pf > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+/* thumbnail */
+.img {
+    width: 45%;
+    background-color: rgb(127, 103, 129);
+}
+.img p { /* 썸네일 완성 시 지워질 예정 */
+    color: white;
+    font-family: 'Noto Sans KR', sans-serif;
+}
+/* description */
+.dsc {
+    width: 55%;
+}
+button {
+    -webkit-transition-duration: 0.4s; /* Safari */ 
+    transition-duration: 0.4s; 
+    color: white;
+    background: white;
+    border: 1px solid;
+    border-radius: 20px;
+    margin: 0 8px;
+    padding: 5px 10px;
+    font-family: 'Noto Sans KR', sans-serif;
+}
+.d1 {
+  color: #c3aad4;
+}
+.d2 {
+  color: #7a4e82;
+}
+.d1:hover {
+  background-color: #c3aad4;
+  color: white;
+}
+.d2:hover {
+  background-color: #7a4e82;
+  color: white;
+}
+
+/* .mintube {
+  animation: op 5s;
+} */
+/* .mintube {
+  opacity: 0;
+} */
+    </style>
+    <script>
+      var min = $('.mintube').offsetTop
+      var t = $('.mintube').position()
+      window.addEventListener('wheel', function(e) {
+
+        console.log('wheel',e.deltaY)
+        colsole.log('offset',min,'position',t)
+        // if(value > 200) {
+        //   $(".mintube").animate({opacity: 1}, 1000)
+        // }
+      })
+    </script>
 </head>
 <body>
-    <h1>hellloooo!!!!</h1>
+  <div class="pf mintube">
+    <div class="img">
+        <p>준비중입니다</p>
+    </div>
+    <div class="dsc">
+        <h1>MINTUBE</h1>
+        <p>- Youtube Clone</p>
+        <div class="button">
+            <button class="d1">사이트 소개</button>
+            <button onclick="opa()" class="d2">사이트 바로가기</button>
+        </div>
+    </div>
+  </div>
+  
 </body>
 </html>
