--- a/templates/second/dmspresent.html
+++ b/templates/second/dmspresent.html
@@ -16,7 +16,7 @@
     {% include 'header.html' %}
     <div class="thumbnail"></div>
     <div class="post">
-        <h1>this is mintube!!</h1>
+        <h1>this is dms!!</h1>
     </div>
     {% include 'footer.html' %}
 </body>
