media css update, second page update

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                     <h1>MINTUBE</h1>
                     <p>- Youtube Clone</p>
                     <div class="button">
-                        <button onclick="location.href='/present/mintube'">사이트 소개</button>
+                        <button onclick="present('mintube')">사이트 소개</button>
                         <button>사이트 바로가기</button>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                     <h1>DMS</h1>
                     <p>- Front-End practice</p>
                     <div class="button">
-                        <button onclick="location.href='/present/dms'">사이트 소개</button>
+                        <button onclick="present('dms')">사이트 소개</button>
                         <button>사이트 바로가기</button>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                     <h1>CRM</h1>
                     <p>- for HairSalon</p>
                     <div class="button">
-                        <button onclick="location.href='/present/bcrm'">사이트 소개</button>
+                        <button onclick="present('bcrm')">사이트 소개</button>
                         <button>사이트 바로가기</button>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                     <h1>COMMUNITY</h1>
                     <p>- post & comment</p>
                     <div class="button">
-                        <button onclick="location.href='/present/community'">사이트 소개</button>
+                        <button onclick="present('community')">사이트 소개</button>
                         <button>사이트 바로가기</button>
                     </div>
                 </div>
