--- a/static/css/index_style.css
+++ b/static/css/index_style.css
@@ -90,19 +90,19 @@ button:hover {
 .me h3 { font-family: 'Noto Sans KR', sans-serif; }
 
 /* 모바일에 따른 css 변경 */
-@media screen and ( max-width: 575px ) {
-    /* 세로 */
-    @media (orientation: portrait) {
-        .main h1 { font-size: 50px; }
-        .main p { font-size: 32px; }
-        .pf {  padding: 10px 20px; }
-        .profile img {
-                height: 200px;
-                margin: 10px;
-            }
-        .profile p { font-size: 28px; }
-        }
-    /* 가로 */
+@media screen and ( max-width: 767px ) {
+    .main h1 { font-size: 50px; }
+    .main p { font-size: 32px; }
+    .pf {  padding: 10px 20px; }
+    .dsc h1 { font-size: 25px; }
+    .dsc p { font-size: 17px; }
+    .profile img {
+        height: 200px;
+        margin: 10px;
+    }
+    .profile p {
+        font-size: 28px;
+    }
     @media(orientation: landscape) {
         .main h1 { font-size: 50px; }
         .main p { font-size: 32px; }
@@ -116,21 +116,22 @@ button:hover {
         }
     }
 }
+
 /* tablet */
-@media screen and ( max-width: 768px ) {
+@media screen and ( max-width: 1024px ) {
     @media (orientation: portrait) {
-        .main h1 { font-size: 30px; }
-        .main p { font-size: 32px; }
-        .pf {  padding: 10px 20px; }
+        .main h1 { font-size: 80px; }
+        .main p { font-size: 52px; }
+        .pf { padding: 10px 20px; }
         }
     
     @media(orientation: landscape) {
+        .main h1 { font-size: 7em; }
+        .main p { font-size: 60px; }
+        .pf { padding: 10px 50px; }
         .profile img {
-            height: 150px;
-            margin: 10px;
-        }
-        .profile p {
-            font-size: 28px;
+            height: 350px;
+            margin: 16px;
         }
     }
 }
