--- a/static/css/public.css
+++ b/static/css/public.css
@@ -8,6 +8,7 @@ body,html {
     background-color: white;
     position: fixed;
     width: 100%;
+    z-index: 999;
 }
 #header img {
     margin: 10px;
@@ -22,7 +23,7 @@ body,html {
     width: 30px;
 }
 .footer {
-    background-color: rgb(122, 128, 133);
+    background-color: rgb(182, 175, 184);
     height: 50px;
     padding-top: 15px;
 }
