--- a/static/css/second.css
+++ b/static/css/second.css
@@ -1,7 +1,34 @@
-body {
-    height: 2500px;
+/* custom scroll */
+::-webkit-scrollbar { width: 10px; }
+::-webkit-scrollbar-track { background: white; }
+::-webkit-scrollbar-thumb {
+    background: #c3aad4;
+    border-radius: 10px;
 }
+::-webkit-scrollbar-thumb:hover {
+    background: #b98ebe;
+    border-radius: 10px;
+}
+
 .thumbnail {
-    height: 1500px;
-    background: url(https://images.pexels.com/photos/36717/amazing-animal-beautiful-beautifull.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260) fixed;
+    position: fixed;
+    z-index: -999;
+    width: 100%;
+    background-color: rgb(197, 185, 197);
+    opacity: 0.9;
+}
+.post {
+    width: 100%;
+    position:absolute;
+    top: 700px;
+}
+.post h1 {
+    font-size: 6em;
+    padding-left: 20px;
+}
+
+.detail {
+    background-color: white;
+    padding: 0 20px;
+    height: 1000px;/* 임시 */
 }
