--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/public.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index_style.css') }}">
-    <script type="text/javascript" src="{{ url_for('static', filename='js/index_js.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/href.js') }}"></script>
     <title>Min`s Portfolio</title>
 </head>
 <body>
